force-app/main/default/objects/Section__c/Section__c.object-meta.xml
<CustomObject>
    <label>Section</label>
    <nameField>
        <label>Section  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Section</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>