force-app/main/default/objects/Section__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <label>Quote ID</label>
    <referenceTo>Quote__c</referenceTo>
    <relationshipLabel>Section</relationshipLabel>
    <relationshipName>Section</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>