force-app/main/default/objects/Section__c/fields/Section_name__c.field-meta.xml
<CustomField>
    <fullName>Section_name__c</fullName>
    <label>Section name</label>
    <type>TextArea</type>
</CustomField>