force-app/main/default/objects/Section__c/fields/Section_number__c.field-meta.xml
<CustomField>
    <fullName>Section_number__c</fullName>
    <label>Section number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>